packages/infra-app/kubernetes/naked-domain-redirect/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: naked-domain-forward
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
